[EP2] cholesky orientado a linha

--- a/EP2/relatorio_ep2.tex
+++ b/EP2/relatorio_ep2.tex
@@ -1,5 +1,13 @@
 \documentclass[a4paper,11pt]{article}
-\usepackage{dmasproject}
+\usepackage[T1]{fontenc}
+\usepackage[portuguese]{babel}
+\usepackage{csquotes}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{float}
+\usepackage{geometry}
+\geometry{includeheadfoot,margin=2cm}
 \usepackage{multirow}
 
 
