[EP2] Testes feitos, progresso no relatorio

--- a/EP2/relatorio_ep2.tex
+++ b/EP2/relatorio_ep2.tex
@@ -33,13 +33,15 @@ Tabela:
 \multirow{3}{*}{\textbf{PROBLEMA}} & \multicolumn{6}{c|}{\textbf{DECOMPOSIÇÃO DE CHOLESKY}}                                             \\ \cline{2-7} 
                                    & \multicolumn{3}{c|}{\textbf{ORIENTADA A LINHA}} & \multicolumn{3}{c|}{\textbf{ORIENTADA A COLUNA}} \\ \cline{2-7} 
                                    & \textbf{$A=GG^T$}      & \textbf{$Gy=b$}      & \textbf{$G^Tx=y$}     & \textbf{$A=GG^T$}      & \textbf{$Gy=b$}      & \textbf{$G^Tx=y$}      \\ \hline
-\textbf{1}                         &  0              &  0              &  0             &  0              &   0             &      0          \\ \hline
-\textbf{2}                         &   0             &     0           &  0             &    0            &     0           &       0         \\ \hline
-\textbf{3}                         &           0     &         0       &        0       &       0         &       0         &       0         \\ \hline
-\textbf{4}                         &         0       &        0        &      0         &        0        &       0         &      0          \\ \hline
-\textbf{5}                         &        0        &      0          &        0       &         0       &        0        &      0          \\ \hline
-\textbf{6}                         &         0       &       0         &         0      &     0           &       0         &      0          \\ \hline
-\textbf{7}                         &         0       &         0       &         0      &      0          &         0       &       0         \\ \hline
+\textbf{1}                         & $5.80\times10^{-4}$ & $1.70\times10^{-5}$ & $1.30\times10^{-5}$ & $2.19\times10^{-5}$ & $1.50\times10^{-5}$ & $1.70\times10^{-5}$  \\ \hline
+\textbf{2}                         & $4.47\times10^{-3}$ & $6.60\times10^{-5}$ & $7.50\times10^{-5}$ & $5.10\times10^{-5}$ & $5.80\times10^{-4}$ & $6.20\times10^{-5}$  \\ \hline
+\textbf{3}                         & $1.64\times10^{-2}$ & $1.75\times10^{-4}$ & $2.10\times10^{-4}$ & $9.90\times10^{-5}$ & $1.14\times10^{-4}$ & $1.50\times10^{-4}$  \\ \hline
+\textbf{4}                         & $3.98\times10^{-2}$ & $3.49\times10^{-4}$ & $2.78\times10^{-4}$ & $1.90\times10^{-4}$ & $2.20\times10^{-4}$ & $2.76\times10^{-4}$  \\ \hline
+\textbf{5}                         & $7.45\times10^{-2}$ & $5.94\times10^{-4}$ & $4.84\times10^{-4}$ & $2.45\times10^{-4}$ & $3.24\times10^{-4}$ & $4.15\times10^{-4}$  \\ \hline
+\textbf{6}                         & $1.26\times10^{-1}$ & $7.96\times10^{-4}$ & $7.20\times10^{-4}$ & $3.42\times10^{-4}$ & $4.79\times10^{-4}$ & $5.64\times10^{-4}$  \\ \hline
+\textbf{7}                         & $2.08\times10^{-1}$ & $1.07\times10^{-3}$ & $9.67\times10^{-4}$ & $4.77\times10^{-4}$ & $6.31\times10^{-4}$ & $7.76\times10^{-4}$  \\ \hline
+\textbf{8}                         & $1.01\times10^{-1}$ & $1.06\times10^{-3}$ & $1.05\times10^{-3}$ & $4.59\times10^{-4}$ & $6.34\times10^{-4}$ & $7.51\times10^{-4}$  \\ \hline
+\textbf{9}                         & $2.07\times10^{-1}$ & $1.2\times10^{-3}$ & $1.12\times10^{-3}$ & $4.63\times10^{-4}$ & $6.45\times10^{-4}$ & $7.54\times10^{-5}$  \\ \hline
 \end{tabular}
 \end{table}
 
@@ -50,21 +52,21 @@ Comentário sobre a tabela.
 
 Tabela:
 
-% Please add the following required packages to your document preamble:
-% \usepackage{multirow}
 \begin{table}[h]
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-\multirow{3}{*}{\textbf{PROBLEMA}} & \multicolumn{4}{c|}{\textbf{DECOMPOSIÇÃO DE CHOLESKY}}                                             \\ \cline{2-5} 
+\multirow{3}{*}{\textbf{PROBLEMA}} & \multicolumn{4}{c|}{\textbf{DECOMPOSIÇÃO LU}}                                             \\ \cline{2-5} 
                                    & \multicolumn{2}{c|}{\textbf{ORIENTADA A LINHA}} & \multicolumn{2}{c|}{\textbf{ORIENTADA A COLUNA}} \\ \cline{2-5} 
                                    & \textbf{$PA=LU$}         & \textbf{$LUx=Pb$}        & \textbf{$PA=LU$}         & \textbf{$LUx=Pb$}         \\ \hline
-\textbf{1}                         & 0                      & 0                      & 0                      & 0                       \\ \hline
-\textbf{2}                         & 0                      & 0                      & 0                      & 0                       \\ \hline
-\textbf{3}                         & 0                      & 0                      & 0                      & 0                       \\ \hline
-\textbf{4}                         & 0                      & 0                      & 0                      & 0                       \\ \hline
-\textbf{5}                         & 0                      & 0                      & 0                      & 0                       \\ \hline
-\textbf{6}                         & 0                      & 0                      & 0                      & 0                       \\ \hline
-\textbf{7}                         & 0                      & 0                      & 0                      & 0                       \\ \hline
+\textbf{1}                         & $1.10\times10^{-3}$ &  $0$  & $1.11\times10^{-3}$ &  $0$   \\ \hline
+\textbf{2}                         & $1.04\times10^{-2}$ &  $0$  & $9.21\times10^{-3}$ &  $0$   \\ \hline
+\textbf{3}                         & $3.06\times10^{-2}$ &  $0$  & $3.01\times10^{-2}$ &  $0$   \\ \hline
+\textbf{4}                         & $7.75\times10^{-2}$ &  $0$  & $6.98\times10^{-2}$ &  $0$   \\ \hline
+\textbf{5}                         & $1.44\times10^{-1}$ &  $0$  & $1.40\times10^{-1}$ &  $0$   \\ \hline
+\textbf{6}                         & $2.47\times10^{-1}$ &  $0$  & $2.35\times10^{-1}$ &  $0$   \\ \hline
+\textbf{7}                         & $4.02\times10^{-1}$ &  $0$  & $3.76\times10^{-1}$ &  $0$   \\ \hline
+\textbf{8}                         & $4.03\times10^{-1}$ &  $0$  & $3.76\times10^{-1}$ &  $0$   \\ \hline
+\textbf{9}                         & $4.04\times10^{-1}$ &  $0$  & $3.80\times10^{-1}$ &  $0$   \\ \hline
 \end{tabular}
 \end{table}
 
